2013-07-18  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Avoid catching options with names containing other
	options during option extraction.  Strip trailing spaces from
	option values.  Add @@trigger-timing.

	* test/unittest/dtrace-util/tst.evaltime.r: Fix evaltime results.
	* test/unittest/dtrace-util/tst.evaltime32.r: Likewise.

	* Makefunctions (cc-template): Depend on provider headers.
	(dof-template): Depend on all relevant object files.

2013-07-17  Nick Alcock  <nick.alcock@oracle.com>

	First-pointer-argument fetching code, and associated ISA-dependent
	runtime switching.

	* libproc/Pcontrol.h (ps_prochandle_t.elf_machine): New field, the
	ELF architecture header value.
	* libproc/elfish.c (process_elf64): Rename to...
	(Pread_isa_info): ... this, initializing the new field. Also
	initialize P->elf64 explicitlyra ther than depending on the caller
	to do it.
	* libproc/Pcontrol.c (Pcreate): Adjust accordingly.
	(Pgrab): Likewise.
	(Pwait_internal): Likewise, adding comment explaining the lack of
	error handling.
	(Pdynamically_linked): New function.
	* libproc/isadep.c: New, ISA-selection dispatcher conditionalizing
	off elf64 and elf_machine, and one dispatched function:
	Pread_first_arg.
	* libproc/isadep_impl.h: New, prototypes for ISA-dependent
	functions called by isadep.c.
	* libproc/isadep_x86.c: New, all underlying ISA-dependent
	functions that can be called on x86-compatible systems.
	* libproc/libproc.h: Adjust.

	Improved evaltime=main support.

	* libdtrace/dt_proc.c (dt_attach_time_t): New enum, second
	parameter to...
	(dt_proc_attach): ... this, which is also reformulated to use a
	switch and to handle the additional case of a breakpoint on
	__libc_start_main() and getting main() addresses via
	Pread_first_arg().  Improve comments around the dpr_stop /
	dt_prcmode changes.
	(dt_main_fail_rendezvous): Split out of...
	(dt_break_drop_main): ... this, which is renamed to...
	(dt_break_prepare_drop_main): ... this, and tries to drop a