@@ -1,3 +1,12 @@
+2013-07-19  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libproc/rtld.db (rd_ldso_consistent_begin): Do nothing if
+	already halted, whether at a breakpoint or not.
+	(rd_ldso_nonzero_lmid_consistent_begin): Likewise.  If the
+	child dies while we are waiting for a consistent state,
+	note it rather than trying to wait for it.
+	(rd_loadobj_iter): Do not try to run over a dead process.
+
 2013-07-18  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Avoid catching options with names containing other
